--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/trackthis/js-framework#readme",
   "devDependencies": {
     "assert": "^1.4.1",
+    "base64url": "^2.0.0",
     "bluebird": "^3.5.1",
     "co": "^4.6.0",
     "fs-extra": "^6.0.0",
@@ -26,6 +27,7 @@
     "nyc": "^11.7.1",
     "path": "^0.12.7",
     "serial-mocha": "0.0.4",
+    "through": "^2.3.8",
     "trackthis-helpers": "^0.5.1"
   }
 }
