--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple browser framework",
   "main": "dist/framework.js",
   "scripts": {
-    "test": "DEBUG=1 node_modules/.bin/nyc node_modules/.bin/serial-mocha test/* --sort | tee test-output.txt && ./node_modules/.bin/nyc report --reporter=clover && ! grep -q -oP \"\\d+\\sfailing\" test-output.txt && rm test-output.txt || { echo \"Test output is located in 'test-output.txt'\" ; exit 1 ; }"
+    "build": "node build/00-basic.js && node build/01-bundle.js",
+    "test" : "DEBUG=1 node_modules/.bin/nyc node_modules/.bin/serial-mocha test/* --sort | tee test-output.txt && ./node_modules/.bin/nyc report --reporter=clover && ! grep -q -oP \"\\d+\\sfailing\" test-output.txt && rm test-output.txt || { echo \"Test output is located in 'test-output.txt'\" ; exit 1 ; }"
   },
   "repository": {
     "type": "git",
